# Mathlib

./: .gitignore  README.md  RELEASE_NOTES.md  readme.md  status  version_tracking.txt
bleeding/: apply_hotfix_fmod_exact.py  current_plan.txt  verify_v11s.sh
bleeding/v10/: CMakeLists.txt  cordic.h  matrix.h  test  test.h  trigonometry.h
bleeding/v10p5/: CMakeLists.txt  test_dsp  test_linalg
bleeding/v10p5/include/mathlib/: combinatorics.h  ml_core.h  profiles.h
bleeding/v10p5/src/: mathlib.c
bleeding/v10p5/tests/: fuzz_god_mode.c  test.c  test_harness.h
bleeding/v11/: ai_context_pack.md  combinatorics.h  fft.h  fuzz_god_mode  fuzz_god_mode.c  linear_algebra.h  profiles.h  test.c
bleeding/v11A1/: CMakeLists.txt  ai_context_pack.md
bleeding/v11A1/include/mathlib/: fft.h  integral.h  ml_complex.h  ml_exp_log.h  ml_linalg.h  ml_trig.h  quaternion.h  simd_bare_metal.h  simd_batch.h  statistics.h  trigonometry.h
bleeding/v11A1/src/: mathlib.c
bleeding/v11A1/tests/: fuzz_boundary_gauntlet.c  fuzz_god_mode.c  test.c
bleeding/v11S/: .gitignore  CMakeLists.txt  Makefile  README.md  compat.h  run_all_tests.py  soak_test.sh  test
bleeding/v11S/.github/workflows/: ci.yml
bleeding/v11S/docs/: API_STATUS.md  BUILD_AND_INSTALL.md  CLOSURE_P0_APPLIED.md  CLOSURE_PUNCHLIST.md  DESIGN_CONTRACT.md  KNOWN_LIMITATIONS.md  NUMERICAL_POLICY.md  TESTING.md  V11S_CLOSURE_SUMMARY.md
bleeding/v11S/docs/contracts/: 01_trig_minimax.md  02_exp_log_horner.md  03_linalg_lu.md  04_fft_cooley_tukey.md  05_fixed_cordic.md  06_fast_math_quake.md
bleeding/v11S/examples/: hello_tensor.c
bleeding/v11S/include/mathlib/: combinatorics.h  fast_math.h  fft.h  ieee754.h  integral.h  mathlib.h  ml_combinatorics.h  ml_compiler.h  ml_complex.h  ml_core.h  ml_exp_log.h  ml_linalg.h  ml_ode.h  ml_tensor.h  ml_trig.h  profiles.h  simd.h  simd_batch.h  statistics.h  version.h
bleeding/v11S/include/mathlib/internal/: cordic.h  minimax.h  payne_hanek.h
bleeding/v11S/scripts/closure/: 05_p0_3_exp_thresholds.py  09_redteam_p1_1_simd_batch_scalar_fallback.py
bleeding/v11S/scripts/oracles/: generate_oracles.py
bleeding/v11S/src/: combinatorics.c  complex.c  cordic.c  core.c  cpu_dispatch.c  exp_log.c  fft.c  fixed_point.c  integral.c  linalg.c  minimax.c  numerical.c  ode.c  optimization.c  payne_hanek.c  polynomial.c  quadratics.c  quaternion.c  statistics.c  tensor.c  trig.c
bleeding/v11S/src/internal/: cordic.h  hypot.h  ieee_exact.h  minimax.h  payne_hanek.h  pow_util.h
bleeding/v11S/tests/: fuzz_boundary_gauntlet.c  fuzz_god_mode.c  oracle_data.h  run_edge_tests.sh  run_fuzz_vault.py  run_soak.sh  run_tests.py  test.c  test_core.c  test_dsp.c  test_edge_audit_ip1.c  test_edge_audit_ip2.c  test_edge_core.c  test_edge_hyperbolic.c  test_edge_integral.c  test_edge_quaternion.c  test_edge_redteam_p0_2.c  test_edge_redteam_p0_3.c  test_edge_redteam_p0_4.c  test_edge_redteam_p2_logexp.c  test_edge_stats.c  test_edge_trig.c  test_harness.h  test_linalg.c  test_oracle.c  test_trig.c  ultimate_fuzzer.c
bleeding/v12A1/: .gitattributes  Makefile  closure_gate.sh
bleeding/v12A1/cmake/: mathlibConfig.cmake.in
bleeding/v12A1/docs/: API_GUIDE.md  DESIGN_CONTRACT.md  MAINTAINERS.md  SCRIPT_CHANGE_POLICY.md  SECURITY_AND_RELIABILITY.md  TEAM_DOCTRINE.md  V11S_VS_V12A1.md
bleeding/v12A1/docs/contracts/: README.md
bleeding/v12A1/include/mathlib/: ml_complex.h  ml_core.h  ml_numerical.h  ml_polynomial.h  ml_quaternion.h  ml_types.h
bleeding/v12A1/scripts/closure/: 01_p0_exp_log_pow_complex_v2.py  03_redteam_p0_1_ldexp_subnormal_overflow.py  04_p0_2_round_correct.py  04_redteam_p0_2_round_correct.py  06_redteam_p1_1_simd_batch_scalar_fallback.py  07_p0_5_cordic_fuzzer_nonfinite.py  08_p2_log_exp_roundtrip.py  10_redteam_p1_1_test_tolerance_fix.py  README.md
bleeding/v12A1/src/: combinatorics.c  core.c  exp_log.c  optimization.c  polynomial.c  quadratics.c  quaternion.c  trig.c
bleeding/v12A1/src/internal/: hypot.h  minimax.h
bleeding/v12A1/tests/: fuzz_boundary_gauntlet.c  test_edge_combinatorics.c  test_edge_complex.c  test_edge_fixed.c  test_edge_linalg.c  test_edge_numerical.c  test_edge_pow.c  test_edge_redteam_p1_1.c
legacy/v1/: exponential.h  test  test.c
legacy/v2/: combinatorics.h  integral.h  linear_algebra.h  polynomial.h  quadratics.h  test.c
legacy/v3/: linear_algebra.h  statistics.h
legacy/v4/: fft.h  numerical.h  trigonometry.h
legacy/v5/: matrix.h  test.c
legacy/v6/: fft.h  matrix.h
legacy/v7/: ieee754.h  makefile
legacy/v8/: cordic.h  minimax.h  ode.h  test
legacy/v9/: ai_context_pack.md  bench.c  bench_graphics  bench_scientific  bitwise_fp.h  combinatorics.h  complex.h  error.txt  exponential.h  fast_math.h  fft.h  fixed_point.h  ieee754.h  integral.h  linear_algebra.h  makefile  mathlib.c  matrix.h  minimax.h  ml_core.h  payne_hanek.h  profiles.h  quadratics.h  quaternion.h  simd_batch.h  test.c  test.h  trigonometry.h
red_team/: chatgpt.txt  gemini.txt  glm.txt  kimi.txt
stable/v10/: CMakeLists.txt  README.md
stable/v10/include/mathlib/: matrix.h  (+4 more)
stable/v10/src/: mathlib.c
stable/v10/tests/: fuzz_boundary_gauntlet.c  fuzz_god_mode.c  test.c
stable/v11S/: CMakeLists.txt
stable/v11S/docs/: CLOSURE_P1_APPLIED.md  CLOSURE_PUNCHLIST.md  KNOWN_LIMITATIONS.md
stable/v11S/examples/: hello_tensor.c
stable/v11S/src/: complex.c  cpu_dispatch.c  ode.c
stable/v11S/tests/: fuzz_god_mode.c  run_fuzz_vault.py  run_soak.sh  run_tests.py  test_core.c  test_dsp.c  test_edge_audit_ip3.c  test_edge_redteam_p0_1.c  test_edge_redteam_p0_5.c  test_linalg.c  ultimate_fuzzer.c
v1/: integral.h
v2/: test  test.h  trigonometry.h
v3/: complex.h  exponential.h  numerical.h  test  test.c  test.h
v4/: complex.h  test  test.c
v5/: CMakeLists.txt  ieee754.h  integral.h  simd.h
v6/: mathlib.c  simd.h  test  test.c
v7/: CMakeLists.txt  linear_algebra.h  optimization.h  polynomial.h  quadratics.h  statistics.h  test  test.c  test.h
v8/: ai_context_pack.md  bitwise_fp.h  error_free.h  exponential.h  fast_math.h  matrix.h  payne_hanek.h  test.c  trigonometry.h
(+18 files in other folders)
